fix: Correct script path to /index.tsx

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
   <body>
     <div id="root"></div>
-        <script type="module" src="/src/index.tsx"></script>
+        <script type="module" src="/index.tsx"></script>
     <div class="fixed bottom-2 w-full text-center text-[10px] text-white/30 font-sans pointer-events-none select-none z-50">
       Hecho por Camilo Henriquez
     </div>
